fix: code tabs spacing is abnormal in some positions

--- a/src/common/modules/codeTabs.scss
+++ b/src/common/modules/codeTabs.scss
@@ -4,7 +4,7 @@
   .code-tabs {
     // border: 1px solid rgb(240, 240, 240);
     border-radius: 5px;
-    margin-bottom: 20px;
+    margin: 20px 0;
 
     pre {
       margin: 0;
